--- a/style.css
+++ b/style.css
@@ -43,9 +43,6 @@ body{
     transition-duration: 0.3s;
     text-transform: uppercase;
 }
-.navbar a:nth-child(1){
-    color: rgb(58, 69, 230);
-}
 
 .navbar a:hover{
     color:rgb(58, 69, 
@@ -196,4 +193,42 @@ transition-duration: 0.6s;
         background-position-x: -70px;
         background-position-y: 0px;
     }
+}
+
+/* About Me Page */
+.all{
+    width: 100%;
+    position: absolute;
+    top: 20%;
+    height: 75vh;
+    border: 2px solid green;
+}
+
+.about{
+    font-size: 26px;
+    width: 100%;
+}
+
+.about h1{
+    padding-left: 10%;
+    font-family: sans-serif;
+    color: aliceblue;
+    font-weight: 400;
+}
+
+.all .data{
+    display: flex;
+    border: 2px solid rgb(207, 25, 25);
+    width: 100%;
+    height: 64.4vh;
+}
+
+.data .img{
+    border: 2px solid white;
+    width: 50%;
+}
+
+.data .aboutdata{
+    border: 2px solid yellow;
+    width: 50%;
 }
