--- a/style.css
+++ b/style.css
@@ -218,7 +218,6 @@ transition-duration: 0.6s;
 
 .all .data{
     display: flex;
-    border: 2px solid rgb(207, 25, 25);
     width: 100%;
     height: 64.4vh;
 }
@@ -230,6 +229,12 @@ transition-duration: 0.6s;
 }
 
 .data .aboutdata{
-    border: 2px solid yellow;
     width: 50%;
+    color: aliceblue;
+}
+
+.aboutdata p{
+    margin-top: 10%;
+    padding: 10px;
+    word-spacing: 2px;
 }
