--- a/style.css
+++ b/style.css
@@ -201,7 +201,6 @@ transition-duration: 0.6s;
     position: absolute;
     top: 20%;
     height: 75vh;
-    border: 2px solid green;
 }
 
 .about{
@@ -211,20 +210,22 @@ transition-duration: 0.6s;
 
 .about h1{
     padding-left: 10%;
-    font-family: sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 56px;
     color: aliceblue;
-    font-weight: 400;
 }
 
 .all .data{
     display: flex;
     width: 100%;
     height: 64.4vh;
+    margin-top: 30px;
 }
 
 .data .img{
-    background: url();
-    border: 2px solid white;
+    background: url(aboutme.png);
+    background-size: cover;
+    background-position-y: -30px;
     width: 50%;
 }
 
@@ -237,4 +238,6 @@ transition-duration: 0.6s;
     margin-top: 10%;
     padding: 10px;
     word-spacing: 2px;
+    font-family: sans-serif;
+    font-size: 18px;
 }
